<resources>
    <string name="app_name">Tonometer Recorder</string>
    <string name="add_btn_text">Добавить показания</string>

    <string name="sys_text">Верхнее давление:</string>
    <string name="dia_text">Нижнее давление:</string>
    <string name="pulse_text">Пульс:</string>

    <string name="sys_hint">123</string>
    <string name="dia_hint">62</string>
    <string name="pulse_hint">57</string>

    <string name="save">Добавить</string>

    <string name="add_header">Добавление записи</string>

    <string name="th_date">Дата</string>
    <string name="th_sys">Верхнее давление</string>
    <string name="th_dia">Нижнее давление</string>
    <string name="th_pulse">Пульс</string>

    <string name="message">Нет ни одной записи.\n Добавьте новую запись!</string>
    <string name="common_view">The_common_view</string>
    <string name="records">Records</string>
    <string name="tonometer">Tonometer</string>
    <string name="description">Developing this app, developer was seeing this tonometer:</string>

    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
</resources>