<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:text="@string/add_header"
        android:textAlignment="center"
        android:layout_marginBottom="40sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginTop="5sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sys_text"
            android:textSize="24sp"
            />
        <EditText
            android:id="@+id/sys"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:ems="3"
            android:hint="@string/sys_hint"
            android:autofillHints="@string/sys_hint"
            android:digits="0123456789"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginTop="5sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dia_text"
            android:textSize="24sp"
            />
        <EditText
            android:id="@+id/dia"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:ems="2"
            android:hint="@string/dia_hint"
            android:autofillHints="@string/dia_hint"
            android:digits="0123456789"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40sp"
        >

        <TextView
            android:layout_marginTop="5sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pulse_text"
            android:textSize="24sp"
            />
        <EditText
            android:id="@+id/pulse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:ems="2"
            android:hint="@string/pulse_hint"
            android:autofillHints="@string/pulse_hint"
            android:digits="0123456789"
            />
    </LinearLayout>

    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onBtnClick"
        android:text="@string/save"
        />
</LinearLayout>