<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow android:background="@drawable/border">

            <TextView
                android:background="@drawable/border"
                android:padding="@dimen/cell_padding"
                android:text="@string/th_date" />

            <TextView
                android:background="@drawable/border"
                android:padding="@dimen/cell_padding"
                android:text="@string/th_sys" />

            <TextView
                android:background="@drawable/border"
                android:padding="@dimen/cell_padding"
                android:text="@string/th_dia" />

            <TextView
                android:padding="@dimen/cell_padding"
                android:text="@string/th_pulse" />
        </TableRow>
    </TableLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_record_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:srcCompat="@android:drawable/ic_input_add"
        android:contentDescription="@string/add_btn_text"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        />
</RelativeLayout>