<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border">

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="@dimen/cell_height"
        android:background="@drawable/border"
        android:gravity="center"
        android:padding="@dimen/cell_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.25"
        app:autoSizeTextType="uniform"
        tools:text="@string/th_date" />

    <TextView
        android:id="@+id/sys"
        android:layout_width="0dp"
        android:layout_height="@dimen/cell_height"
        android:background="@drawable/border"
        android:gravity="center"
        android:padding="@dimen/cell_padding"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.25"
        app:autoSizeTextType="uniform"
        tools:text="@string/th_sys" />

    <TextView
        android:id="@+id/dia"
        android:layout_width="0dp"
        android:layout_height="@dimen/cell_height"
        android:background="@drawable/border"
        android:gravity="center"
        android:padding="@dimen/cell_padding"
        app:layout_constraintStart_toEndOf="@+id/sys"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.25"
        app:autoSizeTextType="uniform"
        tools:text="@string/th_dia" />

    <TextView
        android:id="@+id/pulse"
        android:layout_width="0dp"
        android:layout_height="@dimen/cell_height"
        android:background="@drawable/border"
        android:gravity="center"
        android:padding="@dimen/cell_padding"
        app:layout_constraintStart_toEndOf="@+id/dia"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.25"
        app:autoSizeTextType="uniform"
        tools:text="@string/th_pulse" />
</androidx.constraintlayout.widget.ConstraintLayout>